--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
+<h2 style="text-align:center ;">Cars List</h2>
 <div class="container">
     <div class="row">
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
